updated with partials

--- a/_extensions/navigation/_extension.yml
+++ b/_extensions/navigation/_extension.yml
@@ -18,6 +18,7 @@ contributes:
         - apa.csl
       template-partials:
         - partials/doc-class.tex
+        - partials/title.tex
         - partials/before-body.tex
     html:
       css: styles.css
